examples/invalid/semanticErr/declaration/undeclaredVarAccess.wacc
# assignment to undeclared variable
# Output:
# #semantic error#

#Program:#

begin
  int x = 10 ;
  x = x + y
end
